inter/Tests/Invalid/miscol.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_table table
	kind K_column_of_number column of K_number
	kind K_column_of_colour column of K_colour
	constant (K_column_of_number) C_egtable_col1 = { 1, 4, 9, 16 }
	constant (K_column_of_colour) C_egtable_col2 = { I_green, undef, I_red }
	constant (K_table) C_egtable = table{ C_egtable_col1, C_egtable_col2, C_complaint }
